@@ -1,7 +1,11 @@
 package com.humanitarian.logistics.crawler;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 public class CrawlerRegistry {
     private static final Logger LOGGER = Logger.getLogger(CrawlerRegistry.class.getName());
@@ -62,7 +66,7 @@ public class CrawlerRegistry {
     public List<String> getCrawlerDisplayNames() {
         return crawlerConfigs.values().stream()
             .map(c -> c.displayName)
-            .toList();
+            .collect(Collectors.toList());
     }
     
     public CrawlerConfig getConfig(String crawlerName) {
